[package]
name = "hwp-convert-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for converting HWP/HWPX documents through Hancom Office automation"
license = "MIT"
repository = "https://github.com/nanpuhaha/hwp-convert-cli"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "hwp-convert-cli"
path = "src/bin/hwp-convert-cli.rs"

[[bin]]
name = "hwpc"
path = "src/bin/hwpc.rs"
